# autocoder

./: .env.example  README.md  pyproject.toml  todo.md
.claude/agents/: developer.md  git-agent.md  todo-agent.md
docs/: LOGGING_IMPROVEMENTS.md  start.md
examples/: demo_logging.py
src/autocoder/: __init__.py  __main__.py  config.py  main.py
