[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autocoder"
version = "0.1.0"
description = "Autonomous coding tool using Claude Code SDK"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "nibzard", email = "wave@nibzard.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "claude-code-sdk",
]

[project.scripts]
autocoder = "autocoder.main:main"

[project.urls]
Homepage = "https://github.com/nibzard/autocoder"
Repository = "https://github.com/nibzard/autocoder"
Issues = "https://github.com/nibzard/autocoder/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/autocoder"]